<resources>
    <string name="app_name">NearbyPlacesMovie</string>
    <string name="title_activity_location_selection">LocationSelectionActivity</string>
</resources>
